# napari-points2regions

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: deploy.yml  test-and-deploy.yml
src/napari_points2regions/: __init__.py  _widget.py  napari.yaml
src/napari_points2regions/_tests/: test_widget.py
