[metadata]
name = napari-points2regions

description = A napari plugin for Points2Regions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wahlby-lab/napari-points2regions
author = Jonas Windhager
author_email = jonas@windhager.io
license = MIT
license_files = LICENSE
classifiers =
    Framework :: napari
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/wahlby-lab/napari-points2regions/issues
    Documentation = https://github.com/wahlby-lab/napari-points2regions#README.md
    Source Code = https://github.com/wahlby-lab/napari-points2regions
    User Support = https://github.com/wahlby-lab/napari-points2regions/issues

[options]
packages = find:
install_requires =
    colorcet
    magicgui
    napari
    numpy
    pandas
    points2regions

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-points2regions = napari_points2regions:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml
